--- a/src/main/resources/templates/fragments/navbar-connectee.html
+++ b/src/main/resources/templates/fragments/navbar-connectee.html
@@ -6,9 +6,11 @@
                 <span>ENI-Enchères</span>
             </a>
             <nav>
-                <span th:text="'Bienvenue, ' + ${utilisateur.pseudo}">Bienvenue, Nom</span>
+                <a href="/profil" class="profile-link">
+                    <img th:src="@{'/img/profils/' + ${utilisateur.photo}}" alt="Photo de profil" class="profile-pic">
+                    <span th:text="${utilisateur.pseudo}">Pseudo</span>
+                </a>
                 <a href="/encheres">Mes enchères</a>
-                <a href="/profil">Mon profil</a>
                 <a href="/deconnexion">Déconnexion</a>
             </nav>
         </div>
