--- a/src/main/resources/templates/fragments/navbar-connectee.html
+++ b/src/main/resources/templates/fragments/navbar-connectee.html
@@ -7,7 +7,7 @@
             </a>
             <nav>
                 <a href="/profil" class="profile-link">
-                    <img th:src="@{'/img/profils/' + ${utilisateur.photo}}" alt="Photo de profil" class="profile-pic">
+<!--                    <img th:src="@{'/img/profils/' + ${utilisateur.photo}}" alt="Photo de profil" class="profile-pic">-->
                     <span th:text="${utilisateur.pseudo}">Pseudo</span>
                 </a>
                 <a href="/encheres">Mes enchères</a>
