--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -4,44 +4,116 @@ body {
     margin: 0;
 }
 
-.hero {
-    text-align: center;
-    padding: 4rem 1rem;
-    background: linear-gradient(to right, #3498db, #2980b9);
-    color: white;
+.filtres {
+    padding: 1rem 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
-.btn {
-    background: #fff;
-    color: #2980b9;
-    padding: 0.75rem 1.5rem;
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
+.filtre-title {
     font-weight: bold;
-    margin-top: 1rem;
-    display: inline-block;
+    margin-bottom: 0.5rem;
 }
 
-.btn:hover {
-    background: #ddd;
-}
-.encheres {
-    padding: 2rem;
+.filtre-group {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    width: 100%;
+    flex-wrap: wrap;
 }
 
-.grid {
+.filtre-input {
+    flex-grow: 2;
+    position: relative;
+}
+
+.input-icon {
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.input-icon i {
+    position: absolute;
+    left: 10px;
+}
+
+.input-icon input {
+    padding-left: 30px;
+    height: 2rem;
+    width: 100%;
+}
+
+.filtre-button {
+    flex-shrink: 0;
+}
+
+.filtre-categorie {
+    margin-left: auto;
+}
+
+.encheres-title {
+    text-align: center;
+    margin: 2rem 0;
+}
+
+.categorie-title {
+    margin-top: 2rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding-left: 2rem;
+}
+
+.carousel {
     display: flex;
     flex-wrap: wrap;
     gap: 1.5rem;
-    justify-content: center;
+    padding: 0 2rem;
+    justify-content: flex-start;
 }
 
 .card {
+    display: flex;
     background: white;
-    padding: 1rem;
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    width: 250px;
-    text-align: center;
+    width: 600px;
+    overflow: hidden;
+}
+
+.card-image img {
+    width: 90%;
+    object-fit: cover;
+    height: 100%;
+    padding: 5%;
+}
+
+.card-content {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.card-title {
+    text-decoration: underline;
+    margin-bottom: 1rem;
+}
+
+.btn {
+    background: #2980b9;
+    color: #fff;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    margin-top: auto;
+    width: fit-content;
+    align-self: flex-start;
+}
+
+.btn:hover {
+    background: #1f5f91;
 }
