--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -2,6 +2,8 @@
 <html lang="en"
       data-th-fragment="layout(content, title,css)"
       xmlns:th="http://www.thymeleaf.org">
+<!-- Font Awesome -->
+<script src="https://kit.fontawesome.com/0dfb43c94e.js" crossorigin="anonymous"></script>
 <head>
     <meta charset="UTF-8">
     <title data-th-replace="${title}"></title>
@@ -20,5 +22,6 @@
 </main>
 <footer data-th-replace="~{fragments/footer :: footer}">
 </footer>
+
 </body>
 </html>
