--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -3,4 +3,12 @@ footer {
     color: white;
     text-align: center;
     padding: 1rem;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin: 0 auto;
+    padding-bottom: 0;
+
+
 }
