--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -9,6 +9,7 @@
     <title data-th-replace="${title}"></title>
     <link rel="stylesheet" data-th-href="@{/css/modal.css}">
     <link rel="stylesheet" data-th-href="@{/css/index.css}">
+    <link rel="stylesheet" data-th-href="@{/css/article.css}">
     <link rel="stylesheet" data-th-href="@{/css/header.css}">
     <link rel="stylesheet" data-th-href="@{/css/footer.css}">
     <link rel="shortcut icon" data-th-href="@{/images/LogoENI.png}" />
